<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_addnewgoal"
    tools:context="com.example.goalsetting.addnewgoal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="10dp"
        android:layout_gravity="start">

        <LinearLayout
            android:id="@+id/titleLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
          >

        <TextView
            android:id="@+id/createNewGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/create_goal"
            android:textSize="@dimen/add_new_goal_size"
            android:layout_marginEnd="7dp"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nameLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/titleLinear">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:text="@string/title"
                android:textSize="18sp"
                android:padding="12dp"
                android:layout_marginEnd="7dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="1dp"
                android:layout_weight=".20"
                android:hint="@string/enter_goal_name"
                android:layout_marginStart="7dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="@dimen/current_value_size" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/categoryLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/nameLinear">

            <TextView
                android:id="@+id/categoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:text="@string/category"
                android:textSize="18sp"
                android:padding="12dp"/>

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/startLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/categoryLinear"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/startText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:text="@string/start"
                android:textSize="18sp"
                android:padding="12dp"
                android:layout_marginEnd="7dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="1dp"
                android:layout_weight=".20"
                android:hint="@string/enter_start_value"
                android:layout_marginStart="7dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startFieldEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="@dimen/current_value_size" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/goalLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/startLinear"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/goalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:text="@string/goal"
                android:textSize="18sp"
                android:padding="12dp"
                android:layout_marginEnd="7dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/goalEntry"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="1dp"
                android:layout_weight=".20"
                android:hint="@string/enter_goal_value"
                android:layout_marginStart="7dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/goalEntryEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="@dimen/current_value_size" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>